--- a/diffusion_policy/config/task/square_image_abs.yaml
+++ b/diffusion_policy/config/task/square_image_abs.yaml
@@ -24,7 +24,8 @@ dataset_type: &dataset_type ph
 # dataset_path: &dataset_path data/robomimic/datasets/${task.task_name}/${task.dataset_type}/square_d0_obs_pseudo_black_matte0.0_abs.hdf5
 # dataset_path: &dataset_path data/robomimic/datasets/${task.task_name}/${task.dataset_type}/square_d0_obs_orig_black_matte0.0_iiwa.hdf5
 # dataset_path: &dataset_path data/robomimic/datasets/${task.task_name}/${task.dataset_type}/square_d0_obs_black_matte0.0_panda200_iiwa50.hdf5
-dataset_path: &dataset_path /users/ysong135/scratch/datasets/diffpo/datasets/square_d0_obs_black_matte0.0_panda200_iiwa50.hdf5
+# dataset_path: &dataset_path /users/ysong135/scratch/datasets/diffpo/datasets/square_d0_obs_black_matte0.0_panda200_iiwa100.hdf5
+dataset_path: &dataset_path /users/ysong135/scratch/datasets/diffpo/datasets/square_d0_obs_black_matte0.0_panda200_iiwa150.hdf5
 abs_action: &abs_action True
 
 # checkpoint:
@@ -39,11 +40,11 @@ env_runner:
   n_train: 6
   n_train_vis: 2
   train_start_idx: 0
-  n_test: 10
-  n_test_vis: 2
+  n_test: 50
+  n_test_vis: 10
   test_start_seed: 100000
   # use python's eval function as resolver, single-quoted string as argument
-  max_steps: ${eval:'1000 if "${task.dataset_type}" == "mh" else 1000'}
+  max_steps: ${eval:'1000 if "${task.dataset_type}" == "mh" else 600'}
   n_obs_steps: ${n_obs_steps}
   n_action_steps: ${n_action_steps}
   render_obs_key: 'agentview_image'
